--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -1662,7 +1662,7 @@
     "services": {
       "1": {
         "title": "Business Presentation (Starter)",
-        "price": "from 10\u20ac",
+        "price": "from 10\u20ac per year",
         "description": "Ideal for a CV, portfolio, or a one-page site. Template-based, auto-generated. Editable via form."
       },
       "2": {
