--- a/frontend/src/i18n/locales/sr.json
+++ b/frontend/src/i18n/locales/sr.json
@@ -1674,7 +1674,7 @@
     "services": {
       "1": {
         "title": "Poslovna prezentacija  (Starter)",
-        "price": "10 €",
+        "price": "od 10 € godišnje",
         "description": "Idealno za CV, portfolio, jednu stranicu. Prikaz po šablonu, generiše se automatski. Uređivanje putem forme."
       },
       "2": {
