Podešavanje sadržaja profakture

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -2099,7 +2099,7 @@
       "name": "Radoje Božić s.p. EXPRESS WEB Belgrade-Palilula",
       "address": "Address: VITEZOVA KARAĐORĐEVE ZVEZDE 50, 11050 Belgrade",
       "ids": "Company No: 68170168 | Tax ID: 115191597",
-      "account": "Bank account: 160-XXX-XXXXX-XX"
+      "account": "Bank account: 105000000331557669"
     }
   }
 
