--- a/frontend/src/i18n/locales/sr.json
+++ b/frontend/src/i18n/locales/sr.json
@@ -2109,7 +2109,7 @@
       "name": "Radoje Božić pr Računarsko programiranje EXPRESS WEB Beograd-Palilula",
       "address": "Adresa: VITEZOVA KARAĐORĐEVE ZVEZDE 50, 11050 Beograd",
       "ids": "MB: 68170168 | PIB: 115191597",
-      "account": "Račun: 160-XXX-XXXXX-XX"
+      "account": "Račun: 105000000331557669"
     }
   }
 }
