--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -1998,7 +1998,7 @@
   },
   "adminSites": {
     "title": "🌐 Submitted Presentations",
-    "no-sites": "No presentations to display.",
+    "noSites": "No presentations to display.",
     "columns": {
       "name": "Name",
       "user": "User",
