--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -1019,6 +1019,7 @@
   },
   "siteview": {
     "previewOf": "Site preview:",
+    "notFound": "Not found",
     "pro": {
       "title": "This is a PRO presentation.",
       "editBlocked": "Editing will be enabled after activation."
