Ispravke na templateima

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -1830,6 +1830,8 @@
     "footerLink": "Express web platform"
   },
   "classicPreviewPro": {
+    "openPdfInNewTab": "Open PDF in new tab.",
+    "downloadPdf": "Download PDF",
     "nav": {
       "about": "About Us",
       "offer": "Our Offer",
