Dodavanje oficijelne mail adrese

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -433,7 +433,7 @@
     "address_line1": "Radoje Božić pr Computer programming EXPRESS WEB Beograd-Palilula",
     "address_line2": "VITEZOVA KARAĐORĐEVE ZVEZDE 50, 11050 Beograd",
     "email_title": "Contact email",
-    "email_value": "contact [at] gbsplatforma.com",
+    "email_value": "office@express-web.express",
     "phone_title": "Phone",
     "phone_value": "+381 61 217 90 13"
   },
