--- a/frontend/src/i18n/locales/sr.json
+++ b/frontend/src/i18n/locales/sr.json
@@ -443,7 +443,7 @@
     "address_line1": "Radoje Božić pr Računarsko programiranje EXPRESS WEB Beograd-Palilula",
     "address_line2": "VITEZOVA KARAĐORĐEVE ZVEZDE 50, 11050 Beograd",
     "email_title": "Kontakt email",
-    "email_value": "kontakt [at] gbsplatforma.com",
+    "email_value": "office@express-web.express",
     "phone_title": "Telefon",
     "phone_value": "+381 61 217 90 13"
   },
