--- a/frontend/src/i18n/locales/sr.json
+++ b/frontend/src/i18n/locales/sr.json
@@ -443,7 +443,8 @@
     "address_line1": "Radoje Božić pr Računarsko programiranje EXPRESS WEB Beograd-Palilula",
     "address_line2": "VITEZOVA KARAĐORĐEVE ZVEZDE 50, 11050 Beograd",
     "email_title": "Kontakt email",
-    "email_value": "office at express-web.express",
+    "email_user": " office",
+    "email_domain": "express-web.express",
     "phone_title": "Telefon",
     "phone_value": "+381 61 217 90 13"
   },
