--- a/frontend/src/i18n/locales/sr.json
+++ b/frontend/src/i18n/locales/sr.json
@@ -1800,7 +1800,11 @@
   "registerAndCreate": "🚀 Registruj se i napravi svoj sajt",
   "note": "Ne moraš da se registruješ da bi isprobao formu:",
   "freeSiteButton": "📝 Kreiraj svoju BESPLATNU prezentaciju",
-  "proSiteButton": "🚀 Kreiraj svoju PRO prezentaciju"
+  "proSiteButton": "🚀 Kreiraj svoju PRO prezentaciju",
+  "title_free": "FREE - besplatna varijanta",
+  "title_pro": "PRO - plaćena varijanta",
+  "description_free": "Primer besplatne verzije. Dodatna izrada logoa 990,00 din",
+  "description_pro": "Primer pro prezentacije, sa izradom logoa. Cena od 10 € do 50 € u zavisnosti od nivoa dodatnih usluga. Moguća kupovina domena po najpovoljnijim uslovima."
 },
 "requestModal": {
   "title": "📩 Zatraži ponudu",
