Izmene na Frontendu

--- a/frontend/src/i18n/locales/sr.json
+++ b/frontend/src/i18n/locales/sr.json
@@ -397,7 +397,7 @@
   "cta_button": "Kontaktiraj nas"
 },
 "faqs": {
-  "label": "Najčešća pitanja",
+  "label": "Najčešće postavljana pitanja",
   "title": "Sve što treba da znate",
   "questions": {
     "q1": {
