Podešavanje prevoda na en

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -225,7 +225,7 @@
   "resources": "Resources",
   "legals": "Legal",
   "legal": {
-    "name": "Radoje Božić pr Computer programming EXPRESS WEB Beograd-Palilula",
+    "name": "Radoje Božić En (Entrepreneur) Computer programming EXPRESS WEB Beograd-Palilula",
     "mb": "Company ID: 68170168",
     "pib": "VAT ID: 115191597",
     "account": "Account:",
@@ -429,7 +429,7 @@
   },
   "info": {
     "address_title": "Our address",
-    "address_line1": "Radoje Božić pr Computer programming EXPRESS WEB Beograd-Palilula",
+    "address_line1": "Radoje Božić en (Entrepreneur) Computer programming EXPRESS WEB Beograd-Palilula",
     "address_line2": "VITEZOVA KARAĐORĐEVE ZVEZDE 50, 11050 Beograd",
     "email_title": "Contact email",
     "email_user": " office",
