manje korekcije na frontendu

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -3,7 +3,7 @@
   "tagline": "The sky is the limit. Welcome to the world of positive change.",
   "cta": {
     "label": "Featured Services",
-    "title": "Express Design – AI + Canva Pro, fast and easy – from €10",
+    "title": "Express Design – AI + Canva Pro, fast and easy",
     "description": "We offer fast and efficient design services powered by AI and Canva Pro, as well as custom creative design. With Express Design, you get logos, banners, and social media graphics in record time.",
     "button": "Request Design"
   },
