--- a/frontend/src/i18n/locales/sr.json
+++ b/frontend/src/i18n/locales/sr.json
@@ -3,7 +3,7 @@
   "tagline": "Samo nebo je granica. Dobrodošli u svet pozitivnih promena.",
   "cta": {
     "label": "Izdvajamo iz ponude",
-    "title": "Express dizajn - AI + Canva Pro, brzo i lako - već od 10 €",
+    "title": "Express dizajn - AI + Canva Pro, brzo i lako",
     "description": "Za naše klijente nudimo brza i efikasna rešenja uz podršku veštačke inteligencije, ali i kreativni dizajn po meri. Uz Express dizajn, dobijate logo, banere i grafike za društvene mreže u rekordnom roku.",
     "button": "Potraži dizajn"
   },
