--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -225,7 +225,7 @@
   "resources": "Resources",
   "legals": "Legal",
   "legal": {
-    "name": "Radoje Božić En (Entrepreneur) Computer programming EXPRESS WEB Beograd-Palilula",
+    "name": "EXPRESS WEB Beograd-Palilula",
     "mb": "Company ID: 68170168",
     "pib": "VAT ID: 115191597",
     "account": "Account:",
