--- a/frontend/src/i18n/locales/sr.json
+++ b/frontend/src/i18n/locales/sr.json
@@ -229,7 +229,7 @@
   "resources": "Resursi",
   "legals": "Pravna dokumenta",
   "legal": {
-    "name": "Radoje Božić pr Računarsko programiranje EXPRESS WEB Beograd-Palilula",
+    "name": "EXPRESS WEB Beograd-Palilula",
     "mb": "MB: 68170168",
     "pib": "PIB: 115191597",
     "account": "Račun:",
