Izmen na frontendu - prva stranica

--- a/frontend/src/i18n/locales/en.json
+++ b/frontend/src/i18n/locales/en.json
@@ -14,11 +14,11 @@
     "button": "Get Started"
   },
  "hero": {
-  "label": "Express Web now on Fiverr!",
-  "title": "Express web – websites and online stores",
-  "descriptions": "Boost your business with our solutions. Fast, efficient, affordable, and tailored to your needs.",
-  "primary_button": "Express mini site in 5 minutes – free",
-  "secondary_button": "Express site from €10 to €50 per year"
+  "label": "Now available on Fiverr – global offer, local support.",
+  "title": "Express Web – your first step towards digital presence",
+  "descriptions": "Create a modern, fast, and optimized website without complications. Ideal for small businesses, entrepreneurs, and associations.",
+  "primary_button": "Express Mini site in 5 minutes – free",
+  "secondary_button": "Complete sites from €10 per year"
 },
   "features_global": {
     "label": "What do we offer?",
