--- a/frontend/src/i18n/locales/sr.json
+++ b/frontend/src/i18n/locales/sr.json
@@ -14,11 +14,11 @@
     "button": "Započnite"
   },
   "hero": {
-  "label": "Express Web sada i na Fiverr-u!",
-  "title": "Express web - sajtovi i online prodavnice",
-  "descriptions": "Ojačajte svoje poslovanje uz naša rešenja. Brzo, efikasno, povoljno i prilagođeno vašim potrebama.",
-  "primary_button": "Express mini sajt za 5 minuta - besplatno",
-  "secondary_button": "Express sajt od 10 do 50 € godišnje"
+  "label": "Sada i na Fiverr – globalna ponuda, lokalna podrška",
+  "title": "Express Web — vaš prvi korak ka digitalnom prisustvu",
+  "descriptions": "Kreirajte moderan, brz i optimizovan sajt bez komplikacija. Idealno za male biznise, preduzetnike i udruženja.",
+  "primary_button": "Express Mini sajt – besplatno testiranje u 5 minuta",
+  "secondary_button": "Kompletni sajtovi već od 10 € godišnje"
 },
 
   "features_global": {
