Ispravke frontend/src/i18n/locales

--- a/frontend/src/i18n/locales/sr.json
+++ b/frontend/src/i18n/locales/sr.json
@@ -15,7 +15,7 @@
   },
   "hero": {
   "label": "Sada i na Fiverr – globalna ponuda, lokalna podrška",
-  "title": "Express Web — vaš prvi korak ka digitalnom prisustvu.",
+  "title": "Express Web — vaš prvi korak ka digitalnom prisustvu",
   "descriptions": "Kreirajte moderan, brz i optimizovan sajt bez komplikacija. Idealno za male biznise, preduzetnike i udruženja.",
   "primary_button": "Express Mini sajt – besplatno testiranje u 5 minuta",
   "secondary_button": "Kompletni sajtovi već od 10 € godišnje"
